force-app/main/default/objects/Price_Change__c/Price_Change__c.object-meta.xml
<CustomObject>
    <label>Price Change</label>
    <nameField>
        <displayFormat>PCN-{0000}</displayFormat>
        <label>Price Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Change</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>