force-app/main/default/objects/Price_Change__c/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Secondary_Customer_Category</valueSetName>
    </valueSet>
</CustomField>