force-app/main/default/objects/Price_Change__c/fields/Off__c.field-meta.xml
<CustomField>
    <fullName>Off__c</fullName>
    <label>% Off</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>