force-app/main/default/objects/Price_Change__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MRP</fullName>
                <default>true</default>
                <label>MRP</label>
            </value>
            <value>
                <fullName>Unit Price</fullName>
                <isActive>false</isActive>
                <label>Unit Price</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>