force-app/main/default/objects/Price_Change__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Off__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>Customer_Category__c</columns>
    <columns>Type__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>